--- a/index.css
+++ b/index.css
@@ -128,6 +128,7 @@ input{
     background-repeat:no-repeat ;
     background-position: top;
     background-size: 80%;
+    position: relative;
 
 }
 #panel.on{
@@ -169,3 +170,18 @@ input{
     background-image: linear-gradient(to right,rgb(235, 40, 40) 100%, #333 0%);
     background-clip: text;
 }
+#panel > a {
+    text-decoration: none;
+    color: #f3f3f3;
+    border: 1px solid red;
+    border-radius: 7px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 1em;
+    background-color: #333;
+    transition: background-color .3s;
+}
+#panel > a:hover {
+    background-color: #333;
+} 
